documentation/comments/style changes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <body>
     <div class="container">
         <h1>Observatory Data Comparison Tool</h1>
+
         <h3>Compare existing property IDs against monthly analytics reports.</h3>
-        
+
+        <h5>Upload your own Unique Property IDs CSV or default to tool's GA4 dataset.</h5>
+
+        <br>
+
         <div id="error" class="error hidden"></div>
         <div id="defaultNotice" class="hidden notice"></div>
         
